# qcloneitem

./: CMakeLists.txt  README.md  main.cpp  main.qml  qclonebase.cpp  qclonebase.h  qcloneitem.cpp  qcloneitem.h  qcloneitem_p.h  qcloneitemplugin.cpp  qclonewindow.cpp  qclonewindow.h  qmldir  run.cmd
example/: main.cpp  main.qml
